--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="https://marcincyboran.github.io/portfolio">
+  <base href="/">
   <link rel="shortcut icon" href="./../images/favicon.ico">
   <title>Portfolio - Marcin Cyboran</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800&display=swap&subset=latin-ext" rel="stylesheet">
